@@ -1,19 +1,19 @@
 package com.kobe.warehouse.service.dto;
 
 import com.kobe.warehouse.domain.Commande;
+
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class CommandeDTO extends CommandeWrapperDTO {
 
     private List<OrderLineDTO> orderLines;
-    private MagasinDTO magasin;
     private UserDTO user;
-    private UserDTO lastUserEdit;
 
-    public CommandeDTO() {}
+
+    public CommandeDTO() {
+    }
 
     public CommandeDTO(Commande commande) {
         super(commande);
@@ -25,10 +25,10 @@ public class CommandeDTO extends CommandeWrapperDTO {
             .stream()
             .map(OrderLineDTO::new)
             .sorted(Comparator.comparing(OrderLineDTO::getUpdatedAt, Comparator.reverseOrder()))
-            .collect(Collectors.toList());
-        magasin = Optional.ofNullable(commande.getMagasin()).map(MagasinDTO::new).orElse(null);
+            .toList();
+
         user = Optional.ofNullable(commande.getUser()).map(UserDTO::new).orElse(null);
-        lastUserEdit = Optional.ofNullable(commande.getLastUserEdit()).map(UserDTO::new).orElse(null);
+
         setTotalProduits(orderLines.size());
     }
 
@@ -41,14 +41,6 @@ public class CommandeDTO extends CommandeWrapperDTO {
         return this;
     }
 
-    public MagasinDTO getMagasin() {
-        return magasin;
-    }
-
-    public CommandeDTO setMagasin(MagasinDTO magasin) {
-        this.magasin = magasin;
-        return this;
-    }
 
     public UserDTO getUser() {
         return user;
@@ -59,12 +51,5 @@ public class CommandeDTO extends CommandeWrapperDTO {
         return this;
     }
 
-    public UserDTO getLastUserEdit() {
-        return lastUserEdit;
-    }
 
-    public CommandeDTO setLastUserEdit(UserDTO lastUserEdit) {
-        this.lastUserEdit = lastUserEdit;
-        return this;
-    }
 }
